--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ideiactivitati">
+    package="com.example.ideiactivitati" >
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -12,10 +12,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.IdeiActivitatiKotlin">
+        android:theme="@style/Theme.IdeiActivitatiKotlin" >
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${GOOGLE_MAPS_API_KEY}" />
+
         <receiver
             android:name=".widget.ActivitatiWidget"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -25,12 +30,9 @@
                 android:resource="@xml/activitati_widget_info" />
         </receiver>
 
-        <service android:name=".widget.ActivitatiWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="${GOOGLE_MAPS_API_KEY}" />
+        <service
+            android:name=".widget.ActivitatiWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
 
         <activity
             android:name=".FormularActivity"
@@ -39,7 +41,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.IdeiActivitatiKotlin.NoActionBar">
+            android:theme="@style/Theme.IdeiActivitatiKotlin.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,9 +50,9 @@
         </activity>
 
         <provider
-            android:authorities="com.example.ideiactivitati.data.ActivitatiFC"
             android:name=".data.ActivitatiFC"
-            android:exported="true"/>
+            android:authorities="com.example.ideiactivitati.data.ActivitatiFC"
+            android:exported="true" />
     </application>
 
 </manifest>
