--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,10 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.2'
     kapt 'androidx.room:room-compiler:2.4.2'
     implementation 'androidx.room:room-common:2.4.2'
+
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    // laura
+    implementation 'com.google.android.libraries.places:places:2.6.0'
 }
